Fix toolbar icons on theme adwaita too much pading and fix diferent from one toolbar to other (tools - snap)

--- a/share/ui/Adwaita-dark.css
+++ b/share/ui/Adwaita-dark.css
@@ -60,3 +60,13 @@ spinbutton undershoot {
 #DesktopMainTable spinbutton{
     font-family: sans-serif;
 }
+toolbar button image {
+    min-width:19px;
+    min-height:19px;
+    padding:3px;
+}
+toolbar button {
+    min-width:25px;
+    min-height:25px;
+    padding:0px;
+}
